Fix bug 1527864: Prevent entity list scrollbar flashing

--- a/frontend/src/core/loaders/components/CircleLoader.css
+++ b/frontend/src/core/loaders/components/CircleLoader.css
@@ -1,6 +1,7 @@
 .entities .loading {
     color: #7BC876;
     font-size: 128px;
+    height: 190px;
     padding: 40px 0 10px;
     text-align: center;
 }
